--- a/subject.html
+++ b/subject.html
@@ -5,6 +5,15 @@
   <head>
     <title>Java Minecraft Basics and Survival</title>
   </head>
+  
+  <style>
+  body {
+    background-color: #32CD32;
+    border: dashed brown;
+       }
+  h1 {color: blue;}
+  h3 {font: italic small-caps bold 24px sans-serif;}
+  </style>
 
   <body>
     <ul>
