--- a/final.html
+++ b/final.html
@@ -1,1 +1,54 @@
+<!DOCTYPE html>
+
+<html lang="en">
+
+	<head>
+		<title>Games and Results</title>
+	</head>
+	<style>
+	body {
+		background-color: #99ff99;
+		border: 2px solid green;
+		border-radius: 8px;
+	     }
+	h1 {color: black;
+	    font: italic small-caps bold 30px sans-serif;
+	   }
+	h2 {color: black;
+	    font: italic small-caps bold 22px sans-serif;
+	   }
+	p {font-family: "Times New Roman", Times, serif;
+	   color: black;
+	  }
+	</style>
+	<body>
+		<h1>Games and Results</h1>
+		<h2>By: Nelson So (Period 4)
+		<h3>Project Description</h3>
+			<p>My project consists of 2 single-player games and a kind of tracker. The two games are
+				Rock, Paper, Scissors and Blackjack. The tracker produces a graph based upon the results of
+				your Rock, Paper, Scissors results. </p>
+		<h3>Instructions</h3>
+			<p>XXX</p>
+		<h3>How it works</h3>
+			<p>XXX</p>
+		<h3>Files</h3>
+			<ul>
+				<li>1st file</li>
+				<li>2nd file</li>
+			</ul>
+		<h3>Resources</h3>
+			<p>The following resources were used to aid me in developing the games.</p>
+			<ul>
+				<li>link to rock paper scissors</li>
+				<li>link to blackjack</li>
+			</ul>
+		<h3>List of Bugs, Errors, and Things to Be Aware Of</h3>
+			<ul>
+				<li>XXX</li>
+			</ul>
+	</body>
+</html>
+
+
 
