--- a/final.html
+++ b/final.html
@@ -29,7 +29,16 @@
 				Rock, Paper, Scissors and Blackjack. The tracker produces a graph based upon the results of
 				your Rock, Paper, Scissors results. </p>
 		<h3>Instructions</h3>
-			<p>XXX</p>
+			<p>The file I submitted contains 2 separate files that are meant to be run separatelyl. I was unable
+			to make a zip file, so I decided to mark each file with a comment instead. I had mentioned so in a comment
+			on my submission on the HW server.</p>
+			<p>When you run Rock, Paper, Scissors, there will be a prompt asking you if you want to play. Simply enter any value. 
+			Then, proceed play according to the instructions: you will be asked to enter a choice. After entering a choice, you will be
+			given a result. Continue playing until you don't want to. Then, simply enter "quit" when prompted, and your overall results
+			will be brought to you in the form of a bar graph. </p>
+			<p>When you run Blackjack, you will be automatically dealt a hand. Simply hit H for a hit or S to stand. If you need help
+			on how to play Blackjack, click 
+			</p>
 		<h3>How it works</h3>
 			<p>XXX</p>
 		<h3>Files</h3>
