--- a/final.html
+++ b/final.html
@@ -37,24 +37,27 @@
 			given a result. Continue playing until you don't want to. Then, simply enter "quit" when prompted, and your overall results
 			will be brought to you in the form of a bar graph. </p>
 			<p>When you run Blackjack, you will be automatically dealt a hand. Simply hit H for a hit or S to stand. If you need help
-			on how to play Blackjack, click 
+			on how to play Blackjack, click <a href="https://en.wikipedia.org/wiki/Blackjack">here</a>. (Please note that my version of Blackjack
+			only allows hitting and standing. There are no things like side bets or insurance.)
 			</p>
 		<h3>How it works</h3>
 			<p>XXX</p>
 		<h3>Files</h3>
 			<ul>
-				<li>1st file</li>
-				<li>2nd file</li>
+				<li>cs_project_6-6-2020: The main file containing both games (When I made the file, I had written in the wrong year. Oops!)</li>
 			</ul>
 		<h3>Resources</h3>
 			<p>The following resources were used to aid me in developing the games.</p>
 			<ul>
-				<li>link to rock paper scissors</li>
-				<li>link to blackjack</li>
+				<li>Link to rock paper scissors: Click <a href="https://en.wikipedia.org/wiki/Rock_paper_scissors">here</a>.</li>
+				<li>Link to blackjack: Click <a href="https://en.wikipedia.org/wiki/Blackjack">here</a>.</li>
 			</ul>
 		<h3>List of Bugs, Errors, and Things to Be Aware Of</h3>
 			<ul>
-				<li>XXX</li>
+				<li>When you run Rock, Paper, Scissors and you try to quit, the bar graph that shows you your results will show up. However,
+				you may have some difficulty in closing in, because when I tried to X out the bar graph after I was done seeing it, it simply 
+				re-appeared. In order to solve this issue after running the program on Thonny, you need to click the STOP button on Thonny. (It's 
+				basically the small red button near the small green button that you would click to run a program.)</li>
 			</ul>
 	</body>
 </html>
