--- a/final.html
+++ b/final.html
@@ -26,10 +26,10 @@
 		<h2>By: Nelson So (Period 4)
 		<h3>Project Description</h3>
 			<p>My project consists of 2 single-player games and a kind of tracker. The two games are
-				Rock, Paper, Scissors and Blackjack. The tracker produces a graph based upon the results of
+				Rock, Paper, Scissors and Blackjack. The tracker produces a bar graph based upon the results of
 				your Rock, Paper, Scissors results. </p>
 		<h3>Instructions</h3>
-			<p>The file I submitted contains 2 separate files that are meant to be run separatelyl. I was unable
+			<p>The file I submitted contains 2 separate files that are meant to be run separately. I was unable
 			to make a zip file, so I decided to mark each file with a comment instead. I had mentioned so in a comment
 			on my submission on the HW server.</p>
 			<p>When you run Rock, Paper, Scissors, there will be a prompt asking you if you want to play. Simply enter any value. 
