--- a/final.html
+++ b/final.html
@@ -55,7 +55,7 @@
 		<h3>List of Bugs, Errors, and Things to Be Aware Of</h3>
 			<ul>
 				<li>When you run Rock, Paper, Scissors and you try to quit, the bar graph that shows you your results will show up. However,
-				you may have some difficulty in closing in, because when I tried to X out the bar graph after I was done seeing it, it simply 
+				you may have some difficulty in closing it, because when I tried to X out the bar graph after I was done seeing it, it simply 
 				re-appeared. In order to solve this issue after running the program on Thonny, you need to click the STOP button on Thonny. (It's 
 				basically the small red button near the small green button that you would click to run a program.)</li>
 			</ul>
