--- a/final.html
+++ b/final.html
@@ -41,7 +41,16 @@
 			only allows hitting and standing. There are no things like side bets or insurance.)
 			</p>
 		<h3>How it works</h3>
-			<p>XXX</p>
+			<p>Both games will require an input from the play. Simply follow the prompts and instructions, and try your best not to put in unacceptable or 
+			incorrect values.</p>
+			<p>Rock, Paper, Scissors takes an input (rock, paper, or scissors) from the player. Then, the program will randomly select rock, paper, or scissors. The 
+			results are then compared. Rock beats scissors, scissors beats paper, and paper beats rock. If both the player and the program select the same thing, it's a 
+			tie. Then, the result is added into the player's win, loss, or tie count (depending on the result). When the player decides to quit, a bar graph will be produced that
+				shows the player how many wins, losses, and ties they obtained.</p>
+			<p>Blackjack generates a deck and then randomly selects 2 cards for the player and 2 for the dealer. The player then plays Blackjack according to the rules. Unfortunately, 
+			my version of Blackjack only allows hitting and standing as the only options. If the player hits, a card is given to them, and its value is added on to the player's score. If 
+				the player decides to stand, it's the dealer's turn. The dealer will hit if they have a score lower than 17, and the dealer will stand when they have 17 or higher. Then, the 
+				scores of the player and dealer are compared. The higher score wins!</p>
 		<h3>Files</h3>
 			<ul>
 				<li>cs_project_6-6-2020: The main file containing both games (When I made the file, I had written in the wrong year. Oops!)</li>
@@ -58,6 +67,7 @@
 				you may have some difficulty in closing it, because when I tried to X out the bar graph after I was done seeing it, it simply 
 				re-appeared. In order to solve this issue after running the program on Thonny, you need to click the STOP button on Thonny. (It's 
 				basically the small red button near the small green button that you would click to run a program.)</li>
+				<li>There shouldn't be anything wrong with the Blackjack program.</li>
 			</ul>
 	</body>
 </html>
