--- a/final.html
+++ b/final.html
@@ -41,7 +41,7 @@
 			only allows hitting and standing. There are no things like side bets or insurance.)
 			</p>
 		<h3>How it works</h3>
-			<p>Both games will require an input from the play. Simply follow the prompts and instructions, and try your best not to put in unacceptable or 
+			<p>Both games will require an input from the player. Simply follow the prompts and instructions, and try your best not to put in unacceptable or 
 			incorrect values.</p>
 			<p>Rock, Paper, Scissors takes an input (rock, paper, or scissors) from the player. Then, the program will randomly select rock, paper, or scissors. The 
 			results are then compared. Rock beats scissors, scissors beats paper, and paper beats rock. If both the player and the program select the same thing, it's a 
