--- a/final.html
+++ b/final.html
@@ -67,7 +67,7 @@
 				you may have some difficulty in closing it, because when I tried to X out the bar graph after I was done seeing it, it simply 
 				re-appeared. In order to solve this issue after running the program on Thonny, you need to click the STOP button on Thonny. (It's 
 				basically the small red button near the small green button that you would click to run a program.)</li>
-				<li>There shouldn't be anything wrong with the Blackjack program.</li>
+				<li>There shouldn't be anything wrong with the Blackjack program, as long as you don't provide unacceptable inputs.</li>
 			</ul>
 	</body>
 </html>
